[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vsax"
version = "1.2.1"
description = "JAX-native Vector Symbolic Algebra library"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Vasanth Sarathy", email = "vsarathy@gmail.com"}
]
keywords = ["vector-symbolic-architectures", "hyperdimensional-computing", "jax", "vsa", "hdc", "fhrr", "map", "cognitive-computing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "marimo>=0.17.6",
    "matplotlib>=3.9.4",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-setuptools>=69.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/vasanthsarathy/vsax"
Documentation = "https://vasanthsarathy.github.io/vsax/"
Repository = "https://github.com/vasanthsarathy/vsax"
Issues = "https://github.com/vasanthsarathy/vsax/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vsax*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=vsax --cov-report=term-missing --cov-report=html --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]
ignore = ["N803", "N806"]  # Allow uppercase variable names (X, Y) for matrices/batches

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "^.venv/",
    "^build/",
    "^dist/",
]

# Ignore errors in third-party libraries
[[tool.mypy.overrides]]
module = [
    "jax.*",
    "jaxlib.*",
    "numpy.*",
]
ignore_missing_imports = true
ignore_errors = true
